# neyowm

./: Cargo.toml  README.md
neyowm-core/: Cargo.toml
neyowm-core/src/: lib.rs  server.rs  types.rs
neyowm-core/src/xplane/: autopilot.rs  mod.rs  monitor.rs  telemetry.rs
neyowm-term/: Cargo.toml
neyowm-term/src/: app.rs  main.rs  ui.rs
neyowm-term/src/ui/: autopilot_view.rs  command_view.rs  connection_view.rs  flight_vector_view.rs  telemetry_view.rs
xplaneconnect-rs/: Cargo.toml  build.rs
xplaneconnect-rs/include/: xplaneconnect.h
xplaneconnect-rs/src/: lib.rs
xplaneconnect-rs/src/XPlaneConnect/: xplaneconnect.c
