[package]
name = "neyowm"
authors.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
pid = "4.0.0"
xplaneconnect = { path = "../xplaneconnect-rs" }
